--- a/locales/de/LC_MESSAGES/volto.po
+++ b/locales/de/LC_MESSAGES/volto.po
@@ -12,6 +12,16 @@ msgstr ""
 "Plural-Forms: \n"
 
 #: components/schema
+# defaultMessage: Additional data
+msgid "Additional data"
+msgstr "Zusatzinformationen"
+
+#: components/schema
+# defaultMessage: undefined
+msgid "Alignment"
+msgstr "Ausrichtung"
+
+#: components/schema
 # defaultMessage: Image
 msgid "Image"
 msgstr "Bild"
@@ -20,11 +30,6 @@ msgstr "Bild"
 # defaultMessage: Name
 msgid "Name"
 msgstr "Name"
-
-#: components/schema
-# defaultMessage: Position
-msgid "Position"
-msgstr "Positon"
 
 #: components/schema
 # defaultMessage: Quote
