--- a/locales/de/LC_MESSAGES/volto.po
+++ b/locales/de/LC_MESSAGES/volto.po
@@ -27,6 +27,11 @@ msgid "Image"
 msgstr "Bild"
 
 #: components/schema
+# defaultMessage: Language
+msgid "Language"
+msgstr "Sprache"
+
+#: components/schema
 # defaultMessage: Name
 msgid "Name"
 msgstr "Name"
