--- a/locales/de/LC_MESSAGES/volto.po
+++ b/locales/de/LC_MESSAGES/volto.po
@@ -12,14 +12,14 @@ msgstr ""
 "Plural-Forms: \n"
 
 #: components/schema
-# defaultMessage: Additional data
-msgid "Additional data"
+# defaultMessage: Additional information
+msgid "Additional information"
 msgstr "Zusatzinformationen"
 
 #: components/schema
-# defaultMessage: undefined
-msgid "Alignment"
-msgstr "Ausrichtung"
+# defaultMessage: Cite
+msgid "Cite"
+msgstr "Zitiert"
 
 #: components/schema
 # defaultMessage: Image
@@ -40,3 +40,8 @@ msgstr "Name"
 # defaultMessage: Quote
 msgid "Quote"
 msgstr "Zitat"
+
+#: components/schema
+# defaultMessage: This field expects an URL as input (optional). If an URL is provided the additional information will have a relation to this URL, this is due to accessibility norms.
+msgid "This field expects an URL as input (optional). If an URL is provided the additional information will have a relation to this URL, this is due to accessibility norms."
+msgstr "Dieses Feld erwartet eine URL als Eingabe (optional). Wenn eine URL angegeben wird, beziehen sich die Zusatzinformationen auf diese URL, um Barrierefreiheit zu gewährleisten."
