--- a/locales/volto.pot
+++ b/locales/volto.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Plone\n"
-"POT-Creation-Date: 2024-01-26T12:40:48.423Z\n"
+"POT-Creation-Date: 2024-01-30T09:51:05.697Z\n"
 "Last-Translator: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
 "Language-Team: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -14,13 +14,13 @@ msgstr ""
 "Domain: volto\n"
 
 #: components/schema
-# defaultMessage: Additional data
-msgid "Additional data"
+# defaultMessage: Additional information
+msgid "Additional information"
 msgstr ""
 
 #: components/schema
-# defaultMessage: undefined
-msgid "Alignment"
+# defaultMessage: Cite
+msgid "Cite"
 msgstr ""
 
 #: components/schema
@@ -41,4 +41,9 @@ msgstr ""
 #: components/schema
 # defaultMessage: Quote
 msgid "Quote"
+msgstr ""
+
+#: components/schema
+# defaultMessage: This field expects an URL as input (optional). If an URL is provided the additional information will have a relation to this URL, this is due to accessibility norms.
+msgid "This field expects an URL as input (optional). If an URL is provided the additional information will have a relation to this URL, this is due to accessibility norms."
 msgstr ""
