--- a/locales/volto.pot
+++ b/locales/volto.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Plone\n"
-"POT-Creation-Date: 2024-02-19T14:56:25.399Z\n"
+"POT-Creation-Date: 2024-02-19T15:23:26.397Z\n"
 "Last-Translator: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
 "Language-Team: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -44,8 +44,8 @@ msgid "Quote"
 msgstr ""
 
 #: components/schema
-# defaultMessage: This field expects an URL as input (optional). If an URL is provided the additional information will have a relation to this URL, this is due to accessibility norms.
-msgid "This field expects an URL as input (optional). If an URL is provided the additional information will have a relation to this URL, this is due to accessibility norms."
+# defaultMessage: This field is not exposed, it is only used by accessibility tools to provide a better experience.
+msgid "This field is not exposed, it is only used by accessibility tools to provide a better experience."
 msgstr ""
 
 #: components/schema
