--- a/locales/de/LC_MESSAGES/volto.po
+++ b/locales/de/LC_MESSAGES/volto.po
@@ -22,11 +22,6 @@ msgid "Author"
 msgstr "Autor"
 
 #: components/schema
-# defaultMessage: Cite
-msgid "Cite"
-msgstr "Zitiert"
-
-#: components/schema
 # defaultMessage: Enter the URL from where the quote originates here. This field is not exposed, it is only used by accessibility tools to provide a better experience.
 msgid "Enter the URL from where the quote originates here. This field is not exposed, it is only used by accessibility tools to provide a better experience."
 msgstr "Geben Sie hier die URL ein, von der das Zitat stammt. Dieses Feld wird nicht angezeigt, es wird nur von Barrierefreiheittools verwendet, um eine bessere Nutzererfahrung zu gewährleisten."
@@ -55,3 +50,8 @@ msgstr "Dieses Feld wird nicht angezeigt, es wird nur von Barrierefreiheittools 
 # defaultMessage: Accessibility
 msgid "accessibility"
 msgstr "Barrierefreiheit"
+
+#: components/schema
+# defaultMessage: Cite URL
+msgid "citeURL"
+msgstr "Zitat-URL"
